--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "dotenv -e .env.local -- sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --port 3000\"",
-    "build": "vite build && cp instrument.server.mjs .output/server",
+    "dev": "pnpm run build:posts && dotenv -e .env.local -- sh -c \"NODE_OPTIONS='--import ./instrument.server.mjs' vite dev --port 3000\"",
+    "build": "pnpm run build:posts && vite build && cp instrument.server.mjs .output/server",
+    "build:posts": "node --loader ts-node/esm scripts/build-posts.ts",
     "preview": "vite preview",
     "test": "vitest run",
     "lint": "eslint",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
+    "@radix-ui/react-portal": "^1.1.10",
     "@sentry/tanstackstart-react": "^10.22.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
@@ -23,24 +25,26 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
-    "dotenv-cli": "^11.0.0",
-    "jotai": "^2.16.2",
-    "lucide-react": "^0.561.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "dotenv-cli": "^11.0.0",
+    "fast-glob": "^3.3.3",
+    "glob": "^13.0.0",
     "gray-matter": "^4.0.3",
+    "jotai": "^2.16.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-focus-lock": "^2.13.6",
     "react-remove-scroll": "^2.7.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-prism-plus": "^2.0.1",
     "rehype-slug": "^5.0.1",
-    "@radix-ui/react-portal": "^1.1.10",
     "slugify": "^1.6.5",
     "tailwindcss": "^4.1.17",
+    "ts-node": "^10.9.2",
     "vite-tsconfig-paths": "^6.0.2"
   },
   "devDependencies": {
