--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@cloudflare/vite-plugin": "^1.13.8",
+    "@mdx-js/rollup": "^3.1.1",
     "@radix-ui/react-portal": "^1.1.10",
     "@sentry/tanstackstart-react": "^10.22.0",
     "@tailwindcss/vite": "^4.0.6",
@@ -32,8 +33,11 @@
     "gray-matter": "^4.0.3",
     "jotai": "^2.16.2",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.22",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
+    "next-mdx-remote": "^5.0.0",
+    "next-mdx-remote-client": "^2.1.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-focus-lock": "^2.13.6",
@@ -44,6 +48,7 @@
     "slugify": "^1.6.5",
     "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
+    "use-resize-observer": "^9.1.0",
     "vite-tsconfig-paths": "^6.0.2"
   },
   "devDependencies": {
@@ -58,6 +63,7 @@
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
     "typescript": "^5.7.2",
+    "unist-util-visit": "^4.1.0",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0",
